--- a/grails-app/assets/themes/laser/semantic.css
+++ b/grails-app/assets/themes/laser/semantic.css
@@ -26295,6 +26295,9 @@ Floated Menu / Item
 .ui.menu.la-contextBar .la-context-org {
   font-size: 0.87em;
   color: #767676;
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 200px;
+  flex: 0 0 200px;
 }
 
 .ui.menu.la-contextBar .ui.sub.header.item {
